<resources>
    <string name="dashboard">Dashboard</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="shopping_cart">Cart</string>
    <string name="bonus">Bonus</string>
    <string name="settings">Settings</string>
    <string name="notification">Notification</string>
    <string name="popular_products">Popular products</string>
    <string name="category">Category</string>
    <string name="product">Product</string>
    <string name="categories">Categories</string>
</resources>